externals & onClick handler

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "scripts": {
     "start": "set NODE_ENV=local && webpack-dev-server --config webpack/webpack.config.dev.js --content-base src/demo/dist --hot --inline --open --history-api-fallback",
     "build:clean": "rimraf lib/",
-    "build:lib": "webpack --config ./webpack/webpack.config.js && webpack --config ./webpack/webpack.config.min.js",
+    "build:lib": "webpack --config ./webpack/webpack.config.min.js",
     "build:gh-pages": "rimraf docs/ && mkdir -p docs && cp -a src/demo/dist/* docs/ && NODE_ENV=production webpack --config ./webpack/webpack.config.gh-pages.js",
     "version:patch": "npm version patch",
     "push:git": "git push --tags origin master --quiet",
